--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Apple Clone by Tony Miller"
     />
+    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6524938/6295032/css/fonts.css" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
